Added deep background.

--- a/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
@@ -15,10 +15,11 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css" data-ajax="false"/>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 	<link rel="stylesheet" href="themes/MyHollywood2.min.css" />
+	<link href="css/style.css" rel="stylesheet" type="text/css" data-ajax="false"/>
 	<script src="js/libs/modernizr.custom.min.js"></script>
 	<title>My Hollywood</title>
     </head>
-    <body id=backgroundimage background="images/moviereelbg.jpg">
+    <body id=backgroundimage >
 	<div data-role="page" id="home" data-theme="c">
 	    <header data-theme="b"><div data-theme="b"><img src="images/header1_03.gif" id="headerImg" data-theme="b"></div>
 	    </header>
