Added logo to all page headers.

--- a/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
@@ -21,8 +21,10 @@
     </head>
     <body id=backgroundimage >
 	<div data-role="page" id="home" data-theme="c">
-	    <header data-theme="b"><div data-theme="b"><img src="images/header1_03.gif" id="headerImg" data-theme="b"></div>
-	    </header>
+	    <div data-role="header" data-theme="a">
+		<h1>Home</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
+	    </div>
 	    <div data-role="content">
 		<div>
 		    <a href="#addItem"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
@@ -73,6 +75,7 @@
 	<div data-role="page" id="friendsList" data-theme="d">
 	    <div data-role="header" data-theme="b">
 		<h1>Friends</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<ul data-role="listview">
@@ -122,7 +125,8 @@
 	</div>
 	<div data-role="page" id="about"  data-theme="c">
 	    <div data-role="header" data-theme="c">
-		    <h1>About</h1>
+		<h1>About</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<div data-role="content">
@@ -148,7 +152,8 @@
 	</div>
 	<div data-role="page" id="author" data-theme="c">
 	    <div data-role="header" data-theme="c">
-		    <h1>Author Info</h1>
+		<h1>Author Info</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<img src="images/robot.jpg">
@@ -167,6 +172,7 @@
 	<div data-role="page" id="genres" data-theme="c">
 	    <div data-role="header" data-theme="c">
 		<h1>Genres</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<ul data-role="listview" data-inset="false"  data-theme="d">
@@ -210,6 +216,7 @@
 	    <div data-role="header">
 		<a href="#home" data-icon="delete" addBackBtn="true" data-rel="back">Back</a>
 		<h1>Browse</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<p>Oops! There are no movies to browse.</p>
@@ -224,12 +231,15 @@
 		</div>    
 	    </div>
 	</div>
-	<div data-role="page" id="credits" data-theme="c">
+	<div data-role="page" id="credits" data-theme="c" data-add-back-btn="true">
 	    <div data-role="header">
+		<a addBackBtn="true" data-rel="back">Back</a>
 		<h1>Credits</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<p>All images courtesy of iStockPhoto</p>
+		<p>Plaid background from <a href="http://wallpaperswide.com/">Wallpapers Wide</a></p>
 	    </div>
 	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
 		<div data-role="navbar" data-iconpos="left">
@@ -245,6 +255,7 @@
 	    <div data-role="header">
 		<a addBackBtn="true" data-rel="back">Back</a>
 		<h1>Add Movie</h1>
+		<img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<form action="" method="post" id="addItemForm">
