Added undesirable patterns to bronze app.

--- a/MIU/Week_4/Antonio_Ariana_BronzeApp/index.html
+++ b/MIU/Week_4/Antonio_Ariana_BronzeApp/index.html
@@ -19,7 +19,7 @@
 	<title>My Hollywood</title>
     </head>
     <body>
-	<div data-role="page" id="home" data-theme="c">
+	<div data-role="page" id="home" data-theme="d">
 	    <div data-role="header" data-theme="c">
 		<h1>Home</h1>
 		<img src="images/logo_03.gif" id="headerImg" class="ui-btn-right">
@@ -41,7 +41,7 @@
 		</form><br>
 	    </div>
 		<div>
-		    <ul data-role="listview"  data-theme="d">
+		    <ul data-role="listview"  data-theme="a">
 			<li data-role="list-divider" data-theme="c">Browse by...</li>
 			<li><a href="#tempBrowsePage">
 			    <h1>Movie Title</h1></a>
@@ -93,9 +93,10 @@
 		</div>    
 	    </div>
 	</div>
-	<div data-role="page" id="friendsList" data-theme="d">
+	<div data-role="page" id="friendsList" data-theme="a">
 	    <div data-role="header" data-theme="b">
 		<h1>Friends</h1>
+		<img src="images/logo_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<ul data-role="listview">
@@ -143,13 +144,14 @@
 		</div>    
 	    </div>
 	</div>
-	<div data-role="page" id="about"  data-theme="c">
+	<div data-role="page" id="about"  data-theme="d">
 	    <div data-role="header" data-theme="c">
-		    <h1>About</h1>
+		<h1>About</h1>
+		<img src="images/logo_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<div data-role="content">
-		    <ul data-role="listview" data-inset="true"  data-theme="d">
+		    <ul data-role="listview" data-inset="true"  data-theme="a">
 			<li><a href="#author">Author Info</a></li>
 			<li><a href="https://github.com/p32424/mdv-projects/tree/master/MIU/Week_2/Antonio_Ariana_GoldApp">Gold App</a></li>
 			<li><a href="https://github.com/p32424/mdv-projects/tree/gh-pages/MIU/Week_2/Antonio_Ariana_GoldApp">Gold gh-pages</a></li>
@@ -171,7 +173,8 @@
 	</div>
 	<div data-role="page" id="author" data-theme="c">
 	    <div data-role="header" data-theme="c">
-		    <h1>Author Info</h1>
+		<h1>Author Info</h1>
+		<img src="images/logo_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<img src="images/robot.jpg">
@@ -191,6 +194,7 @@
 	    <div data-role="header">
 		<a href="#home" data-icon="delete" addBackBtn="true" data-rel="back">Back</a>
 		<h1>Browse</h1>
+		<img src="images/logo_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<p>Oops! There are no movies to browse.</p>
@@ -208,6 +212,7 @@
 	<div data-role="page" id="credits" data-theme="c">
 	    <div data-role="header">
 		<h1>Credits</h1>
+		<img src="images/logo_03.gif" id="headerImg" class="ui-btn-right">
 	    </div>
 	    <div data-role="content">
 		<p>All images courtesy of iStockPhoto</p>
