--- a/ASD/Project_1/index.html
+++ b/ASD/Project_1/index.html
@@ -9,11 +9,11 @@ ASD 1310
 		
 		<meta charset="utf-8" />
 		<link type="text/css" src="css/style.css" />
-		<title></title>
+		<title>Prohect 1</title>
 		
 	</head>
 	<body>
-		
+		<p>Default layout for Project 1</p>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
