Added more default files.

--- a/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
@@ -299,6 +299,16 @@
 			<label for="seenwith">Who I Saw It With:</label>
 			<input data-clear-btn="true" type="text" name="seenwith" id="seenwith" />
 		    </div>
+		    <div data-role="fieldcontain">
+			<label>Movie Rating:</label><br>
+			<div id="starrating" >
+			    <a href="#"><img src="images/emptystar_03.gif" class="star" id="1ststar" /></a>
+			    <a href="#"><img src="images/emptystar_03.gif" class="star" id="2ndstar" /></a>
+			    <a href="#"><img src="images/emptystar_03.gif" class="star" id="3rdstar" /></a>
+			    <a href="#"><img src="images/emptystar_03.gif" class="star" id="4thstar" /></a>
+			    <a href="#"><img src="images/emptystar_03.gif" class="star" id="5thstar" /></a>
+			</div>
+		    </div>
 		    <div data-role="fieldcontain" >
 			<label for="rating">Movie Rating:</label>
 			<input data-theme="b" type="range" name="rating" id="rating" value="5" min="0" max="10" />
