Changed some styling.

--- a/ASD/Project_1/index.html
+++ b/ASD/Project_1/index.html
@@ -211,10 +211,10 @@ ASD 1310
 								<a href="#"><img src="images/emptystar_03.gif" class="star" id="5thstar" /></a>
 						    </div>
 						</div>
-						<div data-role="fieldcontain" >
+						<!--<div data-role="fieldcontain" >
 						    <label for="rating">Movie Rating:</label>
 						    <input data-theme="b" type="range" name="rating" id="rating" value="5" min="0" max="10" />
-						</div>
+						</div>-->
 						<div data-role="fieldcontain">
 						    <fieldset data-role="controlgroup">
 								<input type="checkbox" value="Favorite" name="favorite" id="favorite" />
