Refactored search to jQuery. Still need to add save functions to make it actually work. Did it in wrong order.

--- a/ASD/Project_2/index.html
+++ b/ASD/Project_2/index.html
@@ -123,7 +123,7 @@ ASD 1310
 						<fieldset>
 						    <div id="fieldset">
 								<ul class="ulstyle">
-								    <li><label for="search"></label><input id="search" type="search" value="" placeholder="Search Movies" /></li>
+								    <li><label for="search"></label><input id="searchInput" type="search" value="" placeholder="Search Movies" /></li>
 								</ul>
 						    </div>
 						    <input type="button" value="Search" id="searchBtn" />
