--- a/ASD/Project_2/index.html
+++ b/ASD/Project_2/index.html
@@ -229,7 +229,7 @@ ASD 1310
 						    <input type="submit" value="Save Movie" id="savemovie" />
 						</div>
 						<a href="#" id="clearData" data-ajax="false">Clear Stored Data</a>
-						<a href="#display" id="displayData" data-ajax="false">Display Data</a>
+						<a href="#displayPage" id="displayData" data-ajax="false">Display Data</a>
 				    </form>
 				</section>
 				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
@@ -241,7 +241,26 @@ ASD 1310
 						</ul>
 				    </div>
 				</footer>
-		    </section
+			</section>
+			<section data-role="page" id="displayPage" data-add-back-btn="true">
+				<header data-role="header">
+				    <a addBackBtn="true" data-rel="back">Back</a>
+				    <h1>Saved Movies</h1>
+				    <img src="images/logo2_03.gif" id="headerImg" class="ui-btn-right">
+				</header>
+				<section data-role="content" id="values">
+					
+				</section>
+				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
+				    <div data-role="navbar" data-iconpos="left">
+						<ul>
+				            <li><a data-icon="home" href="#home">Home</a></li>
+						    <li><a data-icon="star" href="#addItem">Add Movie</a></li>
+						    <li><a data-icon="info" href="#about">About</a></li>
+						</ul>
+				    </div>
+				</footer>
+			</section>	
 		</div>
 		<script src="libs/jquery-2.0.3.min.js"></script>
 		<script src="libs/jquery.mobile-1.3.2.min.js"></script>
