Working on edit input.

--- a/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
@@ -315,7 +315,7 @@
 		    </div>
 		    <div data-role="fieldcontain">
 			<fieldset data-role="controlgroup">
-			    <input type="checkbox" value="Favorite" name="favorite" id="favorite" />
+			    <input type="checkbox" value="Favorite" name="favorite" id="favorite" checked />
 			    <label for="favorite">Save As Favorite?</label>
 			</fieldset>
 		    </div>
