--- a/ASD/Project_2/index.html
+++ b/ASD/Project_2/index.html
@@ -148,6 +148,12 @@ ASD 1310
 				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
 				</header>
 				<section data-role="content">
+					<div>
+						<ul>
+							<li><a href="#" id="jsonData">JSON Data</a></li>
+							<li><a href="#" id="xmlData">XML Data</a></li>
+						</ul>
+					</div>
 				</section>
 				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
 				    <div data-role="navbar" data-iconpos="left">
