json and ajax pull for it are working.

--- a/ASD/Project_2/index.html
+++ b/ASD/Project_2/index.html
@@ -154,6 +154,9 @@ ASD 1310
 							<li><a href="#" id="xmlData">XML Data</a></li>
 						</ul>
 					</div>
+					<div id="dataContent">
+						
+					</div>
 				</section>
 				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
 				    <div data-role="navbar" data-iconpos="left">
