--- a/ASD/Project_2/index.html
+++ b/ASD/Project_2/index.html
@@ -25,7 +25,7 @@ ASD 1310
 			<section data-role="page" id="home" data-theme="c">
 				<header data-role="header">
 				    <h1>Home</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">		
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">		
 				</header>
 				<div data-role="content">
 				    <div>
@@ -52,7 +52,7 @@ ASD 1310
 				<header data-role="header" data-add-back-btn="true">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>About</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<nav data-role="content">
 				    <ul data-role="listview" data-inset="true"  data-theme="d">
@@ -74,7 +74,7 @@ ASD 1310
 				<header data-role="header" data-add-back-btn="true">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Author Info</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content">
 				    <img src="images/robot.jpg">
@@ -94,7 +94,7 @@ ASD 1310
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Credits</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content">
 				    <ul>
@@ -117,9 +117,10 @@ ASD 1310
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Search</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content">
+					<h1>This page is currently down for maintenance! Check back again soon.</h1>
 				    <form action="#" method="post" id="searchForm">
 						<fieldset>
 						    <div id="fieldset">
@@ -145,7 +146,7 @@ ASD 1310
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Browse Movies</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content">
 					<div>
@@ -172,7 +173,7 @@ ASD 1310
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Add Movie</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content">
 				    <form action="" method="post" id="addItemForm">
@@ -256,7 +257,7 @@ ASD 1310
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Saved Movies</h1>
-				    <img src="images/logo2_03.gif" class="headerImg" class="ui-btn-right">
+				    <img src="images/logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content" id="values">
 					<div id="movieDisplay">
