--- a/ASD/Project_2/index.html
+++ b/ASD/Project_2/index.html
@@ -14,7 +14,7 @@ ASD 1310
 		<meta name="MobileOptimized" content="320"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="cleartype" content="on">
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />		
+		<link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />		
 		<link rel="stylesheet" href="libs/themes/MyHollywood2.min.css" />
 		<link href="css/style.css" rel="stylesheet" type="text/css" data-ajax="false"/>
 		<script src="libs/modernizr.custom.min.js"></script>
