Fixed edit function

--- a/ASD/Project_2/index.html
+++ b/ASD/Project_2/index.html
@@ -236,6 +236,9 @@ ASD 1310
 						    <label for="review">*My Review:</label>
 						    <textarea  id="review" class="required"></textarea>
 						</div>
+						<div>
+							<input id="myKey" type="hidden" value="" />
+						</div>
 						<div data-role="fieldcontain">
 						    <input type="submit" value="Save Movie" id="savemovie" />
 						</div>
