--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -153,6 +153,7 @@ ASD 1310
 						<ul>
 							<li><a href="#" id="jsonData">JSON Data</a></li>
 							<li><a href="#" id="xmlData">XML Data</a></li>
+							<li><a href="#" id="couchDBData">CouchDB Data</a></li>
 						</ul>
 					</div>
 					<div id="dataContent">
@@ -282,8 +283,8 @@ ASD 1310
 		</div>
 		<script src="jquery-2.0.3.min.js"></script>
 		<script src="jquery.mobile-1.3.2.min.js"></script>
-		<script type="javascript" src="jquery.validate.min.js"></script>
-		<!--<script type="javascript" src="json.js"></script>-->
-		<script type="javascript" src="main.js"></script>
+		<script type="text/javascript" src="jquery.validate.min.js"></script>
+		<!--<script type="text/javascript" src="json.js"></script>-->
+		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
