Final commit for project turn in.

--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!--
 Author: Ariana Antonio
-Project 2
+Project 3
 ASD 1310
 -->
 <html>
@@ -150,7 +150,7 @@ ASD 1310
 				</header>
 				<section data-role="content">
 					<div>
-						<ul>
+						<ul data-role="listview" data-theme="d">
 							<li><a href="#" id="jsonData">JSON Data</a></li>
 							<li><a href="#" id="xmlData">XML Data</a></li>
 							<li><a href="#" id="couchDBData">CouchDB Data</a></li>
@@ -284,7 +284,7 @@ ASD 1310
 		<script src="jquery-2.0.3.min.js"></script>
 		<script src="jquery.mobile-1.3.2.min.js"></script>
 		<script type="text/javascript" src="jquery.validate.min.js"></script>
-		<!--<script type="text/javascript" src="json.js"></script>-->
+		<script type="text/javascript" src="json.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
