Added couch plugin and slightly updated html and js by commenting out json and xml calls not needed for this project.

--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -35,7 +35,7 @@ ASD 1310
 				<nav data-role="content">
 				    <ul data-role="listview"  data-theme="d">
 						<li><a href="#browse">Browse Movies</a></li>
-						<li><a href="#search">Search Movies</a></li>
+						<!--<li><a href="#search">Search Movies</a></li>-->
 					</ul>		
 				</nav>
 				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
@@ -113,7 +113,7 @@ ASD 1310
 				    </div>    
 				</footer>
 		    </section>
-			<section data-role="page" id="search" data-theme="c" data-add-back-btn="true">
+			<!--<section data-role="page" id="search" data-theme="c" data-add-back-btn="true">
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Search</h1>
@@ -141,19 +141,19 @@ ASD 1310
 						</ul>
 				    </div>
 				</footer>
-			</section>
+			</section>-->
 			<section data-role="page" id="browse" data-theme="c" data-add-back-btn="true">
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
-				    <h1>Browse Movies</h1>
+				    <h1>Browse Genres</h1>
 				    <img src="logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content">
 					<div>
 						<ul data-role="listview" data-theme="d">
-							<li><a href="#" id="jsonData">JSON Data</a></li>
+							<!--<li><a href="#" id="jsonData">JSON Data</a></li>
 							<li><a href="#" id="xmlData">XML Data</a></li>
-							<li><a href="#" id="couchDBData">CouchDB Data</a></li>
+							<li><a href="#" id="couchDBData">CouchDB Data</a></li>-->
 						</ul>
 					</div>
 					<div id="dataContent">
