--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!--
 Author: Ariana Antonio
-Project 3
+Project 4
 ASD 1310
 -->
 <html>
@@ -17,7 +17,9 @@ ASD 1310
 		<link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />		
 		<link rel="stylesheet" href="MyHollywood2.min.css" />
 		<link href="style.css" rel="stylesheet" type="text/css" data-ajax="false"/>
+		
 		<script src="modernizr.custom.min.js"></script>
+		
 		<title>My Hollywood</title>
 	</head>
 	<body>
@@ -34,7 +36,7 @@ ASD 1310
 				</div>
 				<nav data-role="content">
 				    <ul data-role="listview"  data-theme="d">
-						<li><a href="#browse">Browse Movies</a></li>
+						<li><a href="#genrePage">Browse Movies</a></li>
 						<!--<li><a href="#search">Search Movies</a></li>-->
 					</ul>		
 				</nav>
@@ -150,14 +152,11 @@ ASD 1310
 				</header>
 				<section data-role="content">
 					<div>
-						<ul data-role="listview" data-theme="d">
+						<ul data-role="listview" data-theme="d" id="genrelist">
 							<!--<li><a href="#" id="jsonData">JSON Data</a></li>
 							<li><a href="#" id="xmlData">XML Data</a></li>
 							<li><a href="#" id="couchDBData">CouchDB Data</a></li>-->
 						</ul>
-					</div>
-					<div id="dataContent">
-						
 					</div>
 				</section>
 				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
@@ -257,16 +256,44 @@ ASD 1310
 				    </div>
 				</footer>
 			</section>
-			<section data-role="page" id="displayPage" data-add-back-btn="true">
+			<section data-role="page" id="genrePage" data-add-back-btn="true">
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
-				    <h1>Saved Movies</h1>
+				    <h1>Movie Genres</h1>
 				    <img src="logo2_03.gif" class="headerImg ui-btn-right">
 				</header>
 				<section data-role="content" id="values">
-					<div id="movieDisplay">
-						<ul>
+					<div>
+						<ul data-role="listview"  data-theme="d">
+							<li><a href="#savedMovies">Comedy</a></li>
+							<li><a href="#savedMovies">Drama</a></li>
+							<li><a href="#savedMovies">Romance</a></li>
+							<li><a href="#savedMovies">Horror</a></li>
+							<li><a href="#savedMovies">Action</a></li>
+							<li><a href="#savedMovies">Other</a></li>
 						
+						</ul>	
+					</div>	
+				</section>
+				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
+				    <div data-role="navbar" data-iconpos="left">
+						<ul>
+				            <li><a data-icon="home" href="#home">Home</a></li>
+						    <li><a data-icon="star" href="#addItem">Add Movie</a></li>
+						    <li><a data-icon="info" href="#about">About</a></li>
+						</ul>
+				    </div>
+				</footer>
+			</section>
+			<section data-role="page" id="displayPage" data-add-back-btn="true">
+				<header data-role="header">
+				    <a addBackBtn="true" data-rel="back">Back</a>
+				    <h1>Movies Saved</h1>
+				    <img src="logo2_03.gif" class="headerImg ui-btn-right">
+				</header>
+				<section data-role="content">
+					<div>
+						<ul id="movieDisplay">
 						</ul>	
 					</div>	
 				</section>
@@ -283,6 +310,7 @@ ASD 1310
 		</div>
 		<script src="jquery-2.0.3.min.js"></script>
 		<script src="jquery.mobile-1.3.2.min.js"></script>
+		<script src="jquery.couch.js"</script>
 		<script type="text/javascript" src="jquery.validate.min.js"></script>
 		<script type="text/javascript" src="json.js"></script>
 		<script type="text/javascript" src="main.js"></script>
