Genre page is working, not formatting as listview yet.

--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -144,7 +144,7 @@ ASD 1310
 				    </div>
 				</footer>
 			</section>-->
-			<section data-role="page" id="browse" data-theme="c" data-add-back-btn="true">
+			<!--<section data-role="page" id="browse" data-theme="c" data-add-back-btn="true">
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
 				    <h1>Browse Genres</h1>
@@ -155,7 +155,7 @@ ASD 1310
 						<ul data-role="listview" data-theme="d" id="genrelist">
 							<!--<li><a href="#" id="jsonData">JSON Data</a></li>
 							<li><a href="#" id="xmlData">XML Data</a></li>
-							<li><a href="#" id="couchDBData">CouchDB Data</a></li>-->
+							<li><a href="#" id="couchDBData">CouchDB Data</a></li>
 						</ul>
 					</div>
 				</section>
@@ -168,7 +168,7 @@ ASD 1310
 						</ul>
 				    </div>
 				</footer>
-			</section>
+			</section>-->
 			<section data-role="page" id="addItem" data-add-back-btn="true">
 				<header data-role="header">
 				    <a addBackBtn="true" data-rel="back">Back</a>
@@ -264,13 +264,13 @@ ASD 1310
 				</header>
 				<section data-role="content" id="values">
 					<div>
-						<ul data-role="listview"  data-theme="d">
-							<li><a href="#savedMovies">Comedy</a></li>
+						<ul data-role="listview"  data-theme="d" id="genreslist">
+							<!--<li><a href="#savedMovies">Comedy</a></li>
 							<li><a href="#savedMovies">Drama</a></li>
 							<li><a href="#savedMovies">Romance</a></li>
 							<li><a href="#savedMovies">Horror</a></li>
 							<li><a href="#savedMovies">Action</a></li>
-							<li><a href="#savedMovies">Other</a></li>
+							<li><a href="#savedMovies">Other</a></li>-->
 						
 						</ul>	
 					</div>	
