--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -264,15 +264,7 @@ ASD 1310
 				</header>
 				<section data-role="content" id="values">
 					<div>
-						<ul data-role="listview"  data-theme="d" id="genreslist">
-							<!--<li><a href="#savedMovies">Comedy</a></li>
-							<li><a href="#savedMovies">Drama</a></li>
-							<li><a href="#savedMovies">Romance</a></li>
-							<li><a href="#savedMovies">Horror</a></li>
-							<li><a href="#savedMovies">Action</a></li>
-							<li><a href="#savedMovies">Other</a></li>-->
-						
-						</ul>	
+						<ul data-role="listview"  data-theme="d" id="genreslist"></ul>	
 					</div>	
 				</section>
 				<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
