--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -303,7 +303,7 @@ ASD 1310
 		<script src="jquery-2.0.3.min.js"></script>
 		<script src="jquery.mobile-1.3.2.min.js"></script>
 		<script type="text/javascript" src="jquery.validate.min.js"></script>
-		<script src="jquery.couch.js"</script>
+		<script src="jquery.couch.js"></script>
 		<script type="text/javascript" src="json.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
