Data displaying, though not completely correctly.

--- a/ASD/MyHollywood/app/_attachments/genres.html
+++ b/ASD/MyHollywood/app/_attachments/genres.html
@@ -15,7 +15,7 @@ ASD 1310
 			<img src="logo2_03.gif" class="headerImg ui-btn-right">		
 		</header>
 		<div data-role="content">
-            <ul data-role="listview"  data-theme="d" id="movieTitles"></ul>
+            <ul data-theme="d" id="movieTitles"></ul>
 		</div>
 		<footer data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
 			<nav data-role="navbar" data-iconpos="left">
