--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -285,7 +285,7 @@ ASD 1310
 				</header>
 				<section data-role="content">
 					<div>
-						<ul id="movieDisplay">
+						<ul id="movieDisplay" data-role="listview" data-theme="d">
 						</ul>	
 					</div>	
 				</section>
