Final commit for incomplete project.

--- a/ASD/MyHollywood/app/_attachments/index.html
+++ b/ASD/MyHollywood/app/_attachments/index.html
@@ -36,7 +36,7 @@ ASD 1310
 				</div>
 				<nav data-role="content">
 				    <ul data-role="listview"  data-theme="d">
-						<li><a href="#genrePage">Browse Movies</a></li>
+						<li><a href="#displayPage">Browse Movies</a></li>
 						<!--<li><a href="#search">Search Movies</a></li>-->
 					</ul>		
 				</nav>
